# spaceapps2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  dijon.py  main.py  requirements.txt  test.py
assets/: greeting.txt
src/: __init__.py  config_parse.py
src/gui/: __init__.py  filter_adder_frame.py  filter_frame.py  filter_list.py  loop.py  main_window.py  run.py  script_editor_frame.py  share_url_window.py
src/img_proc/: __init__.py  built_in_filters.py  combine.py  custom_parser.py  filters.py  img_proc.py
src/web_interface/: __init__.py  web_interface.py
